Fix wrong background for the boxed code

--- a/themes/pelican-blue/static/css/style.css
+++ b/themes/pelican-blue/static/css/style.css
@@ -110,6 +110,11 @@ code {
   border-radius: 5px;
   background: #eee;
 }
+pre code {
+  padding: 0;
+  border-radius: 0;
+  background: inherit;
+}
 .highlight pre {
   font-size: 14px;
   overflow: auto;
